tests/agl/rejections/parse/two_while_clauses.agl
while true while false do
  ()
done
